--- a/Homeworks/HW3/homework_batch_III_DB.ipynb
+++ b/Homeworks/HW3/homework_batch_III_DB.ipynb
@@ -121,12 +121,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = Node(0,None,None,None)\n",
-    "b = Node(1,None,None,None)\n",
-    "c = Node(2,None,None,None)\n",
-    "d = Node(3,None,None,None)\n",
-    "e = Node(4,None,None,None)\n",
-    "f = Node(5,None,None,None)\n",
+    "a = Node(0)\n",
+    "b = Node(1)\n",
+    "c = Node(2)\n",
+    "d = Node(3)\n",
+    "e = Node(4)\n",
+    "f = Node(5)\n",
     "\n",
     "vertices = [a,b,c,d,e,f]\n",
     "edges = [Edge(a,b,1), Edge(a,c,5), Edge(b,f,15), Edge(c,d,2), Edge(d,e,1), Edge(e,f,3)]"
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "deleted -> 2\npred -> [0]\npred_weight -> [5]\nnext -> [3]\nnext_weight -> [2]\n\nNew edges with shortcut:\npred: 0, succ: 1, val: 1\npred: 1, succ: 5, val: 15\npred: 3, succ: 4, val: 1\npred: 4, succ: 5, val: 3\npred: 0, succ: 3, val: 7\n"
+      "deleted -> 2\npred -> [0, 1]\npred_weight -> [10, 1]\nnext -> [5]\nnext_weight -> [2]\n\nNew edges with shortcut:\npred: 0, succ: 1, val: 1\npred: 1, succ: 3, val: 15\npred: 5, succ: 4, val: 1\npred: 4, succ: 3, val: 3\npred: 0, succ: 5, val: 12\npred: 1, succ: 5, val: 3\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
    "source": [
     "Dijkstra bidirectional algorithm is based on the following ideas:\n",
     "* Start simultaneously Dijkstra algorithm from source and target node respectively in forward and backward graph;\n",
-    "* when the two executions finalize at the same time the same node or when the finalized node of one execution has been already processed in the other one then both executions are stopped and forward and backward path are retrieved (using `get_predecessor` function);\n",
+    "* when the two executions finalize at the same time the same node or when the finalized node of one execution has been already processed in the other one then, after having checked if the found distance is greater than the one obtained summing distances of min nodes in the heaps (this means that minimal distance between source and target node is bigger than the found one and so the correct path is the one just discovered), both executions are stopped and forward and backward path are retrieved (using `get_predecessor` function);\n",
     "* if shortcuts have been added then, before relaxing an edge, we need to check if destination is leading to a node with higher importance in the hierarchy w.r.t. the source one (only in this way we can exploit the advantage of contraction hierarchies and shortcuts).\n"
    ],
    "cell_type": "markdown",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,15 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
     "def bidirect_Dijkstra(f_G, b_G, s, t, shortcuts=False):\n",
     "    # Deep copy is needed, otherwise when updating \n",
-    "    # the value of a node that is propagated also \n",
-    "    # to correspondent node belonging to the other graph\n",
+    "    # the value of a node, this modification is propagated \n",
+    "    # also to correspondent node belonging to the other graph\n",
     "    F_G = deepcopy(f_G)\n",
     "    B_G = deepcopy(b_G)\n",
     "    init_SSSP(F_G)\n",
@@ -350,14 +350,11 @@
     "        u = f_Q.remove_minimum()\n",
     "        v = b_Q.remove_minimum()\n",
     "\n",
-    "        flag = False\n",
-    "\n",
     "        f_queue = []\n",
     "        b_queue = []\n",
     "        dist = inf\n",
     "\n",
     "        if u.index==v.index:\n",
-    "            flag = True\n",
     "            f_queue.append(u)\n",
     "            get_predecessors(u,f_queue)\n",
     "            b_queue.append(v)\n",
@@ -372,7 +369,6 @@
     "            if u.index in backward_processed:\n",
     "                b_node = [x for x in B_G.V if x.index == u.index][0]\n",
     "                if u.d + b_node.d < dist:\n",
-    "                    flag = True\n",
     "                    get_predecessors(u,f_queue)\n",
     "                    b_queue.append(b_node)\n",
     "                    get_predecessors(b_node,b_queue)\n",
@@ -381,13 +377,12 @@
     "            elif v.index in forward_processed:\n",
     "                f_node = [x for x in F_G.V if x.index == u.index][0]\n",
     "                if v.d + f_node.d < dist:\n",
-    "                    flag = True\n",
     "                    b_queue.append(v)\n",
     "                    get_predecessors(v,b_queue)\n",
     "                    get_predecessors(f_node,f_queue)\n",
     "                    dist = v.d + f_node.d\n",
     "            \n",
-    "            if flag is True:\n",
+    "            if v.d + u.d > dist:\n",
     "                f_queue.reverse()\n",
     "                final_weight = dist\n",
     "                break\n",
@@ -425,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,16 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = Node(0,None,None,None)\n",
-    "b = Node(1,None,None,None)\n",
-    "c = Node(2,None,None,None)\n",
-    "d = Node(5,None,None,None)\n",
-    "e = Node(4,None,None,None)\n",
-    "f = Node(3,None,None,None)\n",
+    "a = Node(0)\n",
+    "b = Node(1)\n",
+    "c = Node(2)\n",
+    "d = Node(5)\n",
+    "e = Node(4)\n",
+    "f = Node(3)\n",
     "\n",
     "vertices = [a,b,c,d,e,f]\n",
     "edges = [Edge(a,b,1), Edge(a,c,10), Edge(b,c,1), Edge(b,f,15), Edge(c,d,2), Edge(d,e,1), Edge(e,f,3)]\n",
@@ -476,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -533,14 +528,14 @@
     }
    ],
    "source": [
-    "a = Node(0,None,None,None,imp=1)\n",
-    "b = Node(1,None,None,None,imp=2)\n",
-    "c = Node(2,None,None,None,imp=3)\n",
-    "d = Node(3,None,None,None,imp=4)\n",
-    "e = Node(4,None,None,None,imp=5)\n",
-    "f = Node(5,None,None,None,imp=6)\n",
-    "g = Node(6,None,None,None,imp=7)\n",
-    "h = Node(7,None,None,None,imp=8)\n",
+    "a = Node(0,imp=1)\n",
+    "b = Node(1,imp=2)\n",
+    "c = Node(2,imp=3)\n",
+    "d = Node(3,imp=4)\n",
+    "e = Node(4,imp=5)\n",
+    "f = Node(5,imp=6)\n",
+    "g = Node(6,imp=7)\n",
+    "h = Node(7,imp=8)\n",
     "\n",
     "vertices = [a,b,c,d,e,f,g,h]\n",
     "edges = [Edge(b,c,2), Edge(c,b,1), Edge(c,d,3), Edge(a,e,1), Edge(e,a,3), Edge(h,a,1), Edge(h,g,1), Edge(g,h,1), Edge(d,h,3), Edge(e,f,1), Edge(f,h,1), Edge(a,f,1)]\n",
@@ -556,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -668,14 +663,14 @@
     }
    ],
    "source": [
-    "a = Node(0,None,None,None,imp=1)\n",
-    "b = Node(1,None,None,None,imp=2)\n",
-    "c = Node(2,None,None,None,imp=3)\n",
-    "d = Node(3,None,None,None,imp=4)\n",
-    "e = Node(4,None,None,None,imp=5)\n",
-    "f = Node(5,None,None,None,imp=6)\n",
-    "g = Node(6,None,None,None,imp=7)\n",
-    "h = Node(7,None,None,None,imp=8)\n",
+    "a = Node(0,imp=1)\n",
+    "b = Node(1,imp=2)\n",
+    "c = Node(2,imp=3)\n",
+    "d = Node(3,imp=4)\n",
+    "e = Node(4,imp=5)\n",
+    "f = Node(5,imp=6)\n",
+    "g = Node(6,imp=7)\n",
+    "h = Node(7,imp=8)\n",
     "\n",
     "vertices = [a,b,c,d,e,f,g,h]\n",
     "edges = [Edge(b,c,2), Edge(c,b,1), Edge(c,d,3), Edge(a,e,1), Edge(e,a,3), Edge(h,a,1), Edge(h,g,1), Edge(g,h,1), Edge(d,h,3), Edge(e,f,1), Edge(f,h,1), Edge(a,f,1)]\n",
@@ -688,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
